@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2014-2015, 2017 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2014-2015, 2017-2018 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch
 ## 
 ## This file is part of GnuCOBOL.
@@ -48,7 +48,11 @@ AT_CLEANUP
 
 
 AT_SETUP([COPY: file not found])
-AT_KEYWORDS([copy])
+AT_KEYWORDS([copy case fold-copy])
+
+# FIXME: possibly move "name without literal" to an extra test
+#        also testing the library name part (as "found", because
+#        of different slash)
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -62,6 +66,38 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 [prog.cob:6: error: copy.inc: No such file or directory
+])
+
+AT_DATA([prog2.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       COPY copy.inc.
+       PROCEDURE        DIVISION.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY prog2.cob], [1], [],
+[prog2.cob:6: error: COPY.INC: No such file or directory
+])
+
+AT_DATA([prog3.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       COPY copy.INC.inc.
+       PROCEDURE        DIVISION.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY prog3.cob], [1], [],
+[prog3.cob:6: error: COPY.INC.INC: No such file or directory
+])
+
+AT_CHECK([$COMPILE_ONLY -ffold-copy=lower prog3.cob], [1], [],
+[prog3.cob:6: error: copy.inc.inc: No such file or directory
 ])
 
 AT_CLEANUP
